--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "name": "cryptoconsulting",
   "version": "1.0.0",
+  "engines": {
+    "node": "15.2.1"
+  },
   "main": "server.js",
   "author": "",
   "license": "ISC",
