--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "heroku": "^7.2.0",
-    "moralis": "^0.0.25",
+    "lodash": "^4.17.21",
+    "median": "^0.0.2",
     "nodemon": "^2.0.7",
+    "numeral": "^2.0.6",
     "path": "^0.12.7"
   },
   "scripts": {
     "server": "nodemon server.js",
     "start": "node server.js"
   },
-  "name": "cryptoconsulting",
+  "name": "loans",
   "version": "1.0.0",
   "engines": {
     "node": "15.2.1"
